[package]
name = "cprice"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.34.0"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
reqwest = { version = "0.11.8", features = ["json"] }
serde = { version = "1.0.132", features = ["derive"] }
tokio = { version = "1.15.0", features = ["full"] }
